Fixing icons not showing

--- a/src/components/Pagination/_pagination.scss
+++ b/src/components/Pagination/_pagination.scss
@@ -17,13 +17,13 @@
     padding: var.$padding-smaller;
     color: var.$white;
 
-    &.icon {
-      font-size: var.$font-size-big;
-    }
-
     &.dots {
       pointer-events: none;
       color: var.$white-disabled;
+    }
+
+    ion-icon {
+      font-size: var.$font-size-big;
     }
 
     &.selected {
